--- a/packages/schema-filter-form/package.json
+++ b/packages/schema-filter-form/package.json
@@ -1,33 +1,32 @@
 {
-  "name": "@schema-forms/schema-filter-form",
+  "name": "@schema-forms/filter-form",
   "version": "1.0.0",
-  "private": true,
-  "description": "",
-  "author": "Russell <russell.wang@ximalaya.com>",
-  "homepage": "",
+  "description": "schema antd3 form filter",
+  "author": "Russell",
+  "homepage": "https://github.com/wq1308786830/schema-forms/tree/main/packages/schema-filter-form",
   "license": "ISC",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "dist"
   ],
-  "typings": "lib/types.d.ts",
+  "typings": "dist/types.d.ts",
   "publishConfig": {
-    "registry": "https://registry.npmjs.com/"
+    "registry": "https://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/wq1308786830/schema-forms/tree/main/packages/schema-filter-form"
   },
   "scripts": {
-    "start": "rm -rf lib/** && babel src -x '.tsx,.ts,.js,.jsx' -d lib --copy-files -w",
-    "build": "rm -rf lib/** && babel src -x '.tsx,.ts,.js,.jsx' -d lib --copy-files"
+    "start": "rm -rf dist/** && babel src -x '.tsx,.ts,.js,.jsx' -d dist --copy-files -w",
+    "build": "rm -rf dist/** && babel src -x '.tsx,.ts,.js,.jsx' -d dist --copy-files"
   },
   "dependencies": {
-    "antd": "^3.26.20",
+    "antd": "^3.26.18",
     "autoprefixer": "^8.6.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
