--- a/packages/schema-filter-form/package.json
+++ b/packages/schema-filter-form/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@schema-forms/filter-form",
-  "version": "1.0.3",
+  "name": "schema-filter-form",
+  "version": "1.0.0",
   "description": "schema antd3 form filter ProComponents",
   "author": "Russell",
   "homepage": "https://github.com/wq1308786830/schema-forms/tree/main/packages/schema-filter-form",
@@ -31,8 +31,10 @@
   },
   "dependencies": {
     "antd": "^3.26.18",
-    "autoprefixer": "^8.6.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.4"
   }
 }
