--- a/packages/schema-base-form/package.json
+++ b/packages/schema-base-form/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@schema-forms/base-form",
-  "version": "1.0.1",
+  "name": "schema-base-form",
+  "version": "1.0.0",
   "description": "antd3 schema base form",
   "author": "Russell",
   "homepage": "https://github.com/wq1308786830/schema-forms/tree/main/packages/base-form",
@@ -13,7 +13,7 @@
   "files": [
     "dist"
   ],
-  "typings": "dist/types.d.ts",
+  "typings": "dist/index.d.ts",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
@@ -27,8 +27,11 @@
   },
   "dependencies": {
     "antd": "^3.26.18",
-    "autoprefixer": "^8.6.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^8.6.5",
+    "prettier": "^2.6.2"
   }
 }
